--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,7 @@ h1 {
 
 section {
   margin-top: 8rem;
+  height: 100vh;
 }
 
 section > h2, section > h5 {
@@ -124,7 +125,7 @@ img {
 }
 
 /* -------- MEDIA QUERIES (SMALL DEVICES) --------------*/
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 600px) {
   .container {
     width: var(--container-width-sm);
   }
