--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,8 @@ body {
   color: var(--color-white);
   line-height: 1.7;
   background-image: url(../src/assets/y-so-serious.png);
+  position: relative;
+  min-height: 100vh;
 
 }
 /* ----------------------- GENERAL STYLES -------------------------------*/
