--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ text-decoration: none;
 
   --container-width-lg: 75%;
   --container-width-md: 86%;
-  --container-width-ms: 90%;
+  --container-width-sm: 90%;
 }
 
 html {
@@ -62,7 +62,7 @@ h1 {
 
 section {
   margin-top: 8rem;
-  height: 100vh;
+ 
 }
 
 section > h2, section > h5 {
